Aesthetic issues in web pages, CI-CD pipelines additions
and consistency:
1. Fixed several aesthetic issues in the streamlit pages.
2. Improved the accuracy of some calculations.
3. Added CI-CD pipelines that run unit tests, create Docker images, and push the images to DockerHub.
4. Added a few To-Do list pages.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "scikit-learn>=1.6.1",
     "sqlalchemy>=2.0.40",
     "streamlit>=1.44.1",
+    "streamlit-tree-select>=0.0.5",
     "swiglpk>=5.0.12",
     "yfinance>=0.2.55",
 ]
